--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="apple-mobile-web-app-title" content="virajbhartiya" />
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/android-chrome-192x192.png" />
   <link rel="shortcut icon" href="/logo.png" />
-  <title>virajbhartiya</title>
+  <title>Viraj Bhartiya</title>
 </head>
 
 <body>
