Update meta tags and page title for improved SEO and social sharing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="virajbhartiya&mdash; Efficiency Redefined" />
+  <meta name="description" content="Efficiency Redefined - Viraj Bhartiya's Portfolio" />
+  <meta name="keywords"
+    content="portfolio, Viraj Bhartiya, efficiency, web development, projects, app developement, freelancer" />
+  <meta name="author" content="Viraj Bhartiya" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://virajbhartiya.com" />
+  <!-- Open Graph meta tags -->
+  <meta property="og:title" content="Viraj Bhartiya" />
+  <meta property="og:description" content="Viraj Bhartiya's Portfolio" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://virajbhartiya.com" />
+  <meta property="og:image" content="https://virajbhartiya.com/og-image.svg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="Viraj Bhartiya" />
+  <!-- End of Open Graph meta tags -->
   <link rel="icon" href="/logo.png" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
   <link rel="mask-icon" href="/logo.png" color="#FFFFFF" />
@@ -12,10 +27,10 @@
   <link rel="manifest" href="/site.webmanifest" type="application/manifest+json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="virajbhartiya" />
+  <meta name="apple-mobile-web-app-title" content="Viraj Bhartiya" />
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/android-chrome-192x192.png" />
   <link rel="shortcut icon" href="/logo.png" />
-  <title>Viraj Bhartiya</title>
+  <title>Viraj Bhartiya - Portfolio</title>
 </head>
 
 <body>
