Update og:image meta tag for improved social sharing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="Viraj Bhartiya's Portfolio" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://virajbhartiya.com" />
-  <meta property="og:image" content="https://virajbhartiya.com/og-image.svg" />
+  <meta property="og:image" content="https://virajbhartiya.com/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Viraj Bhartiya" />
