--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/android-chrome-192x192.png" />
   <link rel="shortcut icon" href="/logo.png" />
   <title>Viraj Bhartiya - Portfolio</title>
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "nbae70thdd");
+  </script>
+  <!-- Microsoft Clarity -->
 </head>
 
 <body>
