--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "nbae70thdd");
+    })(window, document, "clarity", "script", "nbanlx7gep");
   </script>
   <!-- Microsoft Clarity -->
 </head>
