--- a/index.html
+++ b/index.html
@@ -4,33 +4,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Efficiency Redefined - Viraj Bhartiya's Portfolio" />
+  <meta name="description"
+    content="Expert Blockchain Developer & Full-Stack Engineer | Viraj Bhartiya - Specializing in Web3, DApps, Smart Contracts, React, Node.js, and Mobile App Development. Contributing to Filecoin, Ethereum, and other major blockchain protocols." />
   <meta name="keywords"
-    content="portfolio, Viraj Bhartiya, efficiency, web development, projects, app developement, freelancer" />
+    content="Viraj Bhartiya, blockchain developer, smart contract developer, web3 developer, full stack developer, freelance developer, DApp development, ethereum developer, filecoin developer, React developer, Node.js developer, mobile app developer, software engineer, protocol engineer, blockchain consultant, web development, app development, cryptocurrency, decentralized applications, smart contracts, blockchain infrastructure, open source contributor, technical architect" />
   <meta name="author" content="Viraj Bhartiya" />
-  <meta name="robots" content="index, follow" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <link rel="canonical" href="https://virajbhartiya.com" />
+
   <!-- Open Graph meta tags -->
-  <meta property="og:title" content="Viraj Bhartiya" />
-  <meta property="og:description" content="Viraj Bhartiya's Portfolio" />
+  <meta property="og:title" content="Viraj Bhartiya | Blockchain & Full-Stack Developer" />
+  <meta property="og:description"
+    content="Expert Blockchain Developer & Full-Stack Engineer specializing in Web3, DApps, and Smart Contracts. Contributing to major protocols like Filecoin, Ethereum, and Near." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://virajbhartiya.com" />
   <meta property="og:image" content="https://virajbhartiya.com/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:site_name" content="Viraj Bhartiya" />
-  <!-- End of Open Graph meta tags -->
+  <meta property="og:site_name" content="Viraj Bhartiya - Portfolio" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Viraj Bhartiya | Blockchain & Full-Stack Developer" />
+  <meta name="twitter:description"
+    content="Expert Blockchain Developer & Full-Stack Engineer specializing in Web3, DApps, and Smart Contracts. Open source contributor to major protocols." />
+  <meta name="twitter:image" content="https://virajbhartiya.com/og-image.png" />
+
+  <!-- Additional SEO meta tags -->
+  <meta name="application-name" content="Viraj Bhartiya Portfolio" />
+  <meta name="msapplication-TileColor" content="#000000" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="Viraj Bhartiya" />
+  <meta name="format-detection" content="telephone=no" />
+
+  <!-- Icons and manifests -->
   <link rel="icon" href="/logo.png" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
-  <link rel="mask-icon" href="/logo.png" color="#FFFFFF" />
-  <meta name="theme-color" content="#000000" />
+  <link rel="mask-icon" href="/logo.png" color="#000000" />
   <link rel="manifest" href="/site.webmanifest" type="application/manifest+json" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="Viraj Bhartiya" />
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/android-chrome-192x192.png" />
   <link rel="shortcut icon" href="/logo.png" />
-  <title>Viraj Bhartiya - Portfolio</title>
+
+  <title>Viraj Bhartiya | Blockchain Developer & Full-Stack Engineer - Web3, DApps, Smart Contracts</title>
+
+  <!-- Structured Data for better SEO -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Viraj Bhartiya",
+      "url": "https://virajbhartiya.com",
+      "image": "https://virajbhartiya.com/og-image.png",
+      "sameAs": [
+        "https://github.com/virajbhartiya",
+        "https://linkedin.com/in/virajbhartiya"
+      ],
+      "jobTitle": "Blockchain Developer & Full-Stack Engineer",
+      "description": "Expert Blockchain Developer & Full-Stack Engineer specializing in Web3, DApps, and Smart Contracts. Contributing to major protocols like Filecoin, Ethereum, and Near.",
+      "knowsAbout": [
+        "Blockchain Development",
+        "Smart Contracts",
+        "Web Development",
+        "DApp Development",
+        "Mobile App Development",
+        "Full Stack Development",
+        "Protocol Engineering"
+      ]
+    }
+  </script>
+
   <!-- Microsoft Clarity -->
   <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
@@ -39,7 +84,6 @@
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "nbanlx7gep");
   </script>
-  <!-- Microsoft Clarity -->
 </head>
 
 <body>
