fix: Add no-translate meta tag and update open source contributions and project data

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google" content="notranslate" />
   <meta name="description"
     content="Expert Blockchain Developer & Full-Stack Engineer | Viraj Bhartiya - Specializing in Web3, DApps, Smart Contracts, React, Node.js, and Mobile App Development. Contributing to Filecoin, Ethereum, and other major blockchain protocols." />
   <meta name="keywords"
