--- a/index.html
+++ b/index.html
@@ -14,17 +14,36 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta name="color-scheme" content="dark light" />
-    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#00efa6" media="(prefers-color-scheme: dark)" />
+    <meta
+      name="theme-color"
+      content="#000000"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#00efa6"
+      media="(prefers-color-scheme: dark)"
+    />
 
     <!-- Icons and manifests -->
     <link rel="icon" href="/logo.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
     <link rel="mask-icon" href="/logo.png" color="#000000" />
-    <link rel="manifest" href="/site.webmanifest" type="application/manifest+json" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/android-chrome-192x192.png" />
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
+      type="application/manifest+json"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="152x152"
+      href="/android-chrome-192x192.png"
+    />
     <link rel="shortcut icon" href="/logo.png" />
 
     <title>Viraj Bhartiya | Blockchain Developer & Full-Stack Engineer</title>
